--- a/.travis.yml
+++ b/.travis.yml
@@ -20,82 +20,10 @@ matrix:
             - libboost1.58-all-dev
             - libsqlite3-dev
       env:
-        - CMAKE_BUILD_TYPE=DEBUG
+        - CMAKE_BUILD_TYPE=Debug
         - CMAKE_C_COMPILER=gcc-5
         - CMAKE_CXX_COMPILER=g++-5
 
-    - os: linux
-      compiler: g++
-      addons:
-        apt:
-          sources:
-            - boost-latest
-            - travis-ci/sqlite3
-            - ubuntu-toolchain-r-test
-          packages:
-            - cmake
-            - cmake-data
-            - g++-5
-            - libboost1.58-all-dev
-            - libsqlite3-dev
-      env:
-        - CMAKE_BUILD_TYPE=RELEASE
-        - CMAKE_C_COMPILER=gcc-5
-        - CMAKE_CXX_COMPILER=g++-5
-
-    - os: linux
-      compiler: g++
-      addons:
-        apt:
-          sources:
-            - boost-latest
-            - travis-ci/sqlite3
-            - ubuntu-toolchain-r-test
-          packages:
-            - cmake
-            - cmake-data
-            - g++-6
-            - libboost1.58-all-dev
-            - libsqlite3-dev
-      env:
-        - CMAKE_BUILD_TYPE=DEBUG
-        - CMAKE_C_COMPILER=gcc-6
-        - CMAKE_CXX_COMPILER=g++-6
-
-    - os: linux
-      compiler: g++
-      addons:
-        apt:
-          sources:
-            - boost-latest
-            - travis-ci/sqlite3
-            - ubuntu-toolchain-r-test
-          packages:
-            - cmake
-            - cmake-data
-            - g++-6
-            - libboost1.55-all-dev
-            - libsqlite3-dev
-      env:
-        - CMAKE_BUILD_TYPE=RELEASE
-        - CMAKE_C_COMPILER=gcc-6
-        - CMAKE_CXX_COMPILER=g++-6
-
-    - os: osx
-      osx_image: xcode7.3
-      compiler: clang++
-      env:
-        - CMAKE_BUILD_TYPE=DEBUG
-        - CMAKE_C_COMPILER=clang-3.7
-        - CMAKE_CXX_COMPILER=clang++-3.7
-
-    - os: osx
-      osx_image: xcode7.3
-      compiler: clang++
-      env:
-        - CMAKE_BUILD_TYPE=RELEASE
-        - CMAKE_C_COMPILER=clang-3.7
-        - CMAKE_CXX_COMPILER=clang++-3.7
 
 before_install:
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then
