--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ matrix:
 
 
 before_install:
+  - sudo sed -i 's/us-central1.gce/us-central1.gce.clouds/' /etc/apt/sources.list 
   - sudo apt-get update
   - sudo apt-get install -y libboost1.58-all-dev g++-5 cmake 
 
