--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,68 @@
+sudo: required
+dist: precise
 language: cpp
-compiler: g++
+notifications:
+  email: false
+
+
+matrix:
+  include:
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-4.9
+      env: COMPILER=g++-4.9
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5
+      env: COMPILER=g++-5
+    - compiler: clang
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.6
+          packages:
+            - clang-3.6
+      env: COMPILER=clang++-3.6
+    - compiler: clang
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.7
+          packages:
+            - clang-3.7
+      env: COMPILER=clang++-3.7
 
 before_install:
-- sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-- sudo apt-get update -qq
+  - sudo apt-get update -qq
+  - sudo apt-get install -y libopencv-dev
 
 install:
-- sudo apt-get install -qq g++-4.8 -y
-- export CXX="g++-4.8"
+  - gem install coveralls-lcov	
+  # install newer LCOV (1.9 was failing)
+  - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
+  - tar xf lcov_1.11.orig.tar.gz
+  - sudo make -C lcov-1.11/ install
+  - sudo apt-get install liblapack-dev libblas-dev libboost-dev libarmadillo-dev
 
+before_script:
+  - lcov --version
+  - gcov --version
+  - g++ --version
+  - PARENTDIR=$(pwd)
+  - mkdir $PARENTDIR/build && cd $PARENTDIR/build
+  - lcov --directory $PARENTDIR/build --zerocounters
 
-script: "cd ydxt25/metaverse && mkdir build && cd build && cmake .. && make"
+script:
+  - cd $PARENTDIR/build
+  - cmake  $PARENTDIR
+  - make
