--- a/.travis.yml
+++ b/.travis.yml
@@ -44,19 +44,11 @@ matrix:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -y libopencv-dev
 
 install:
-  - gem install coveralls-lcov	
-  # install newer LCOV (1.9 was failing)
-  - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
-  - tar xf lcov_1.11.orig.tar.gz
-  - sudo make -C lcov-1.11/ install
-  - sudo apt-get install liblapack-dev libblas-dev libboost-dev libarmadillo-dev
+  - sudo apt-get install libboost-all-dev 
 
 before_script:
-  - lcov --version
-  - gcov --version
   - g++ --version
   - PARENTDIR=$(pwd)
   - mkdir $PARENTDIR/build && cd $PARENTDIR/build
