--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ before_install:
   - sudo apt-get update -qq
 
 install:
-  - sudo apt-get install libboost-all-dev 
+  - sudo apt-get install libboost1.58-all-dev 
 
 before_script:
   - g++ --version
