--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,7 @@ before_install:
   - sudo apt-get update -qq
 
 install:
+  - sudo add-apt-repository -y ppa:boost-latest/ppa
   - sudo apt-get install libboost1.58-all-dev 
 
 before_script:
