--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ before_install:
 
 install:
   - sudo add-apt-repository -y ppa:boost-latest/ppa
-  - sudo apt-get install libboost1.58-all-dev 
+  - sudo apt-get install libboost-dev 
 
 before_script:
   - g++ --version
