--- a/.travis.yml
+++ b/.travis.yml
@@ -40,13 +40,13 @@ before_install:
 install:
 
     # Export CC/CXX to control gcc version.
-    - if [[ $GCC                         ]]; then export CC=gcc-5; export CXX=g++-5; fi
+    - if [[ $GCC                         ]]; then export CC=gcc-5; export CXX=g++-5;  fi
 
 
 script:
-
+    - CXX --version
     # Download and build libbitcoin-network and all dependencies.
-    - if [[ $LINUX && $GCC   && $STATIC  ]]; then CC=$CC CXX=$CXX sudo ./install.sh --build-boost --disable-shared --build-dir=my-build --prefix=$TRAVIS_BUILD_DIR/my-prefix CFLAGS='-Og -g --coverage' CXXFLAGS='-Og -g --coverage'; fi
+    - if [[ $LINUX && $GCC   && $STATIC  ]]; then CC=$CC CXX=$CXX sudo ./install.sh --build-boost --build-dir=my-build --prefix=$TRAVIS_BUILD_DIR/my-prefix ; fi
     #- if [[ $LINUX && $GCC   && $DYNAMIC ]]; then CC=$CC CXX=$CXX sudo ./install.sh --disable-static --build-boost --prefix=$TRAVIS_BUILD_DIR/my-prefix CFLAGS='-Os -s' CXXFLAGS='-Os -s'; fi
 
 
