--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ install:
 
 script:
     # Download and build libbitcoin-network and all dependencies.
-    - if [[ $LINUX && $GCC   && $STATIC  ]]; then CC=$CC CXX=$CXX sudo ./install.sh --build-boost --build-dir=my-build --prefix=$TRAVIS_BUILD_DIR/my-prefix ; fi
+    - if [[ $LINUX && $GCC   && $STATIC  ]]; then CC=$CC CXX=$CXX  ./install.sh --build-boost --build-dir=my-build --prefix=$TRAVIS_BUILD_DIR/my-prefix ; fi
     #- if [[ $LINUX && $GCC   && $DYNAMIC ]]; then CC=$CC CXX=$CXX sudo ./install.sh --disable-static --build-boost --prefix=$TRAVIS_BUILD_DIR/my-prefix CFLAGS='-Os -s' CXXFLAGS='-Os -s'; fi
 
 
